@@ -55,9 +55,9 @@ if l1caloESDMon:
         ADCHitMap_Thresh = 50,
         MaxEnergyRange = 256,
         ADCTimingPerChannel = False,
-        EMFADCCut = 8,
-        HADFADCCut = 8,
-        ADCPedestal = 35,
+        EMFADCCut = 40,
+        HADFADCCut = 40,
+        ADCPedestal = 32,
         PathInRootFile = "L1Calo/PPM",
         ErrorPathInRootFile = "L1Calo/PPM/Errors",
         EventPathInRootFile = "L1Calo/Overview",
