@@ -1,3 +1,7 @@
+2010-05-07  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
+	* Tag as TrigT1CaloMonitoring-00-06-24
+        * Revise ADC maximum slice plots again.
+
 2010-04-30  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
 	* Tag as TrigT1CaloMonitoring-00-06-23
         * Better eta/phi plots.
